--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -118,7 +118,7 @@
 <!ENTITY fxaccount.email.hint 'Email'>
 <!ENTITY fxaccount.password.hint 'Password'>
 
-<!ENTITY fxaccount.icon.contentDescription 'Firefox Accounts icon'>
+
 <!ENTITY fxaccount.password.hide 'Hide'>
 <!ENTITY fxaccount.password.show 'Show'>
 <!ENTITY fxaccount.sign.up 'Sign up'>
@@ -126,10 +126,8 @@
 <!-- Android > Accounts > [Firefox Account] Screen -->
 <!ENTITY fxaccount.options.title 'Options'>
 <!ENTITY fxaccount.options.configure.title 'Configure your Firefox Account'>
-<!ENTITY fxaccount.intro.contentDescription 'Firefox Accounts introduction graphics'>
-<!ENTITY fxaccount.confirmation.email.sent 'Confirmation email sent!'>
 
-<!ENTITY fxaccount.mail.contentDescription 'Firefox Accounts envelope graphic'>
+<!ENTITY fxaccount.confirmation.email.sent 'Confirmation email sent!'>
 <!ENTITY fxaccount.password.length.restriction 'Must be at least 8 characters.'>
 <!ENTITY fxaccount.change.password 'Change password'>
 <!ENTITY fxaccount.status.needs.verification 'Your account needs to be verified. Tap here to verify and start syncing.'>
@@ -140,6 +138,11 @@
 <!ENTITY fxaccount.status.history 'History'>
 <!ENTITY fxaccount.status.passwords 'Passwords'>
 <!ENTITY fxaccount.status.tabs 'Open tabs'>
+
+<!ENTITY fxaccount_checkbox_contentDescription 'Firefox Accounts checkbox graphic'>
+<!ENTITY fxaccount_icon_contentDescription 'Firefox Accounts icon'>
+<!ENTITY fxaccount_intro_contentDescription 'Firefox Accounts introduction graphics'>
+<!ENTITY fxaccount_mail_contentDescription 'Firefox Accounts envelope graphic'>
 
 <!ENTITY fxaccount_getting_started_welcome_to_sync 'Welcome to &syncBrand.shortName.label;'>
 <!ENTITY fxaccount_getting_started_description 'Sign in to sync your tabs, bookmarks, passwords &amp; more.'>
@@ -175,6 +178,9 @@
 <!ENTITY fxaccount_sign_in_forgot_password 'Forgot password?'>
 <!ENTITY fxaccount_sign_in_create_account_instead 'Create an account'>
 <!ENTITY fxaccount_sign_in_unknown_error 'Could not sign in'>
+
+<!ENTITY fxaccount_account_verified_sub_header 'Account verified'>
+<!ENTITY fxaccount_account_verified_description 'You are now ready to use Sync.'>
 
 <!ENTITY fxaccount_update_credentials_sub_header 'Sign in to continue'>
 <!ENTITY fxaccount_update_credentials_button_label 'Sign in'>
