--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -99,9 +99,6 @@
   <string name="sync_text_tab_not_sent">&sync.text.tab.not.sent.label;</string>
 
   <!-- Firefox Account strings -->
-  <string name="firefox_accounts">&firefox.accounts;</string>
-
-  <string name="fxaccount_label">&fxaccount.label;</string>
   <string name="fxaccount_link_tos">&fxaccount.link.tos;</string>
   <string name="fxaccount_link_pn">&fxaccount.link.pn;</string>
   <string name="fxaccount_policy_linktos">&fxaccount.policy.linktos;</string>
@@ -113,27 +110,10 @@
   <string name="fxaccount_options_title">&fxaccount.options.title;</string>
   <string name="fxaccount_options_configure_title">&fxaccount.options.configure.title;</string>
 
-
   <string name="fxaccount_password_hide">&fxaccount.password.hide;</string>
   <string name="fxaccount_password_show">&fxaccount.password.show;</string>
 
-  <string name="fxaccount_sign_up">&fxaccount.sign.up;</string>
-  <string name="fxaccount_password_length_restriction">&fxaccount.password.length.restriction;</string>
-  <string name="fxaccount_change_password">&fxaccount.change.password;</string>
-  <string name="fxaccount_status_needs_upgrade">You need to upgrade Firefox to log in to this account.</string>
-  <string name="fxaccount_status_needs_verification">&fxaccount.status.needs.verification;</string>
-  <string name="fxaccount_status_needs_credentials">&fxaccount.status.needs.credentials;</string>
-  <string name="fxaccount_status_syncing">&fxaccount.status.syncing;</string>
-  <string name="fxaccount_status_sync">&fxaccount.status.sync;</string>
-  <string name="fxaccount_status_bookmarks">&fxaccount.status.bookmarks;</string>
-  <string name="fxaccount_status_history">&fxaccount.status.history;</string>
-  <string name="fxaccount_status_passwords">&fxaccount.status.passwords;</string>
-  <string name="fxaccount_status_tabs">&fxaccount.status.tabs;</string>
-
   <!-- Temporary Firefox Accounts strings. -->
-  <string name="fxaccount_sign_in_success">Account verified</string>
-  <string name="fxaccount_sign_in_success_description">You are now ready to use Sync!</string>
-
   <string name="fxaccount_status_debug_refresh_button_label">Refresh status view</string>
   <string name="fxaccount_status_debug_dump_button_label">Dump account details</string>
   <string name="fxaccount_status_debug_sync_button_label">Force sync</string>
@@ -156,6 +136,10 @@
   <string name="fxaccount_sync_sign_in_error_notification_text">Tap to sign in to &formatS;</string>
 
 <!-- Real strings. -->
+<string name="firefox_accounts">&firefox_accounts;</string>
+<string name="firefox_account">&firefox_account;</string>
+<string name="fxaccount_label">&fxaccount_label;</string>
+
 <string name="fxaccount_checkbox_contentDescription">&fxaccount_checkbox_contentDescription;</string>
 <string name="fxaccount_icon_contentDescription">&fxaccount_icon_contentDescription;</string>
 <string name="fxaccount_intro_contentDescription">&fxaccount_intro_contentDescription;</string>
@@ -202,3 +186,14 @@
 <string name="fxaccount_update_credentials_sub_header">&fxaccount_update_credentials_sub_header;</string>
 <string name="fxaccount_update_credentials_button_label">&fxaccount_update_credentials_button_label;</string>
 <string name="fxaccount_update_credentials_unknown_error">&fxaccount_update_credentials_unknown_error;</string>
+
+<string name="fxaccount_status_sync">&fxaccount_status_sync;</string>
+<string name="fxaccount_status_sync_enabled">&fxaccount_status_sync_enabled;</string>
+<string name="fxaccount_status_needs_verification">&fxaccount_status_needs_verification;</string>
+<string name="fxaccount_status_needs_credentials">&fxaccount_status_needs_credentials;</string>
+<string name="fxaccount_status_needs_upgrade">&fxaccount_status_needs_upgrade;</string>
+<string name="fxaccount_status_bookmarks">&fxaccount_status_bookmarks;</string>
+<string name="fxaccount_status_history">&fxaccount_status_history;</string>
+<string name="fxaccount_status_passwords">&fxaccount_status_passwords;</string>
+<string name="fxaccount_status_tabs">&fxaccount_status_tabs;</string>
+<string name="fxaccount_status_legal">&fxaccount_status_legal;</string>
