--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -99,19 +99,7 @@
   <string name="sync_text_tab_not_sent">&sync.text.tab.not.sent.label;</string>
 
   <!-- Firefox Account strings -->
-  <string name="fxaccount_link_tos">&fxaccount.link.tos;</string>
-  <string name="fxaccount_link_pn">&fxaccount.link.pn;</string>
-  <string name="fxaccount_policy_linktos">&fxaccount.policy.linktos;</string>
-  <string name="fxaccount_policy_linkprivacy">&fxaccount.policy.linkprivacy;</string>
 
-  <string name="fxaccount_email_hint">&fxaccount.email.hint;</string>
-  <string name="fxaccount_password_hint">&fxaccount.password.hint;</string>
-
-  <string name="fxaccount_options_title">&fxaccount.options.title;</string>
-  <string name="fxaccount_options_configure_title">&fxaccount.options.configure.title;</string>
-
-  <string name="fxaccount_password_hide">&fxaccount.password.hide;</string>
-  <string name="fxaccount_password_show">&fxaccount.password.show;</string>
 
   <!-- Temporary Firefox Accounts strings. -->
   <string name="fxaccount_status_debug_refresh_button_label">Refresh status view</string>
@@ -135,15 +123,24 @@
        with the Firefox Account's email address. -->
   <string name="fxaccount_sync_sign_in_error_notification_text">Tap to sign in to &formatS;</string>
 
-<!-- Real strings. -->
+<!-- Firefox Account strings. -->
 <string name="firefox_accounts">&firefox_accounts;</string>
 <string name="firefox_account">&firefox_account;</string>
-<string name="fxaccount_label">&fxaccount_label;</string>
 
 <string name="fxaccount_checkbox_contentDescription">&fxaccount_checkbox_contentDescription;</string>
 <string name="fxaccount_icon_contentDescription">&fxaccount_icon_contentDescription;</string>
 <string name="fxaccount_intro_contentDescription">&fxaccount_intro_contentDescription;</string>
 <string name="fxaccount_mail_contentDescription">&fxaccount_mail_contentDescription;</string>
+
+<string name="fxaccount_email_hint">&fxaccount_email_hint;</string>
+<string name="fxaccount_password_hint">&fxaccount_password_hint;</string>
+<string name="fxaccount_password_hide">&fxaccount_password_hide;</string>
+<string name="fxaccount_password_show">&fxaccount_password_show;</string>
+
+<string name="fxaccount_link_tos">&fxaccount_link_tos;</string>
+<string name="fxaccount_link_pn">&fxaccount_link_pn;</string>
+<string name="fxaccount_policy_linktos">&fxaccount_policy_linktos;</string>
+<string name="fxaccount_policy_linkprivacy">&fxaccount_policy_linkprivacy;</string>
 
 <string name="fxaccount_getting_started_welcome_to_sync">&fxaccount_getting_started_welcome_to_sync;</string>
 <string name="fxaccount_getting_started_description">&fxaccount_getting_started_description;</string>
@@ -154,7 +151,7 @@
 <string name="fxaccount_create_account_sub_header">&fxaccount_create_account_sub_header;</string>
 <string name="fxaccount_create_account_password_length_restriction">&fxaccount_create_account_password_length_restriction;</string>
 <string name="fxaccount_create_account_year_of_birth">&fxaccount_create_account_year_of_birth;</string>
-<!-- Localization note: &formatS1; is fxaccount.policy.linktos, &formatS2; is fxaccount.policy.linkprivacy, both hyperlinked. -->
+
 <string name="fxaccount_create_account_policy_text">&fxaccount_create_account_policy_text;</string>
 <string name="fxaccount_create_account_button">&fxaccount_create_account_button;</string>
 <string name="fxaccount_create_account_choose_what_to_sync">&fxaccount_create_account_choose_what_to_sync;</string>
@@ -168,7 +165,6 @@
 <string name="fxaccount_account_create_not_allowed_learn_more">&fxaccount_account_create_not_allowed_learn_more;</string>
 
 <string name="fxaccount_confirm_account_header">&fxaccount_confirm_account_header;</string>
-<!-- Localization note: &formatS; is the Firefox Account's email address. -->
 <string name="fxaccount_confirm_account_verification_link">&fxaccount_confirm_account_verification_link;</string>
 <string name="fxaccount_confirm_account_resend_email">&fxaccount_confirm_account_resend_email;</string>
 <string name="fxaccount_confirm_account_verification_link_sent">&fxaccount_confirm_account_verification_link_sent;</string>
@@ -197,3 +193,8 @@
 <string name="fxaccount_status_passwords">&fxaccount_status_passwords;</string>
 <string name="fxaccount_status_tabs">&fxaccount_status_tabs;</string>
 <string name="fxaccount_status_legal">&fxaccount_status_legal;</string>
+
+<string name="fxaccount_label">&fxaccount_label;</string>
+
+<string name="fxaccount_options_title">&fxaccount_options_title;</string>
+<string name="fxaccount_options_configure_title">&fxaccount_options_configure_title;</string>
