--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -103,10 +103,11 @@
 <string name="firefox_account">&firefox_account;</string>
 
 <!-- Firefox Account links. -->
-<string name="fxaccount_getting_started_link_old_firefox">https://support.mozilla.org/kb/use-sync-with-an-older-version-of-firefox</string>
+<string name="fxaccount_link_old_firefox">https://support.mozilla.org/kb/use-sync-with-an-older-version-of-firefox</string>
 <string name="fxaccount_link_tos">https://accounts.firefox.com/legal/terms</string>
 <string name="fxaccount_link_pn">https://accounts.firefox.com/legal/privacy</string>
 <string name="fxaccount_link_create_not_allowed">http://www.ftc.gov/news-events/media-resources/protecting-consumer-privacy/kids-privacy-coppa</string>
+<string name="fxaccount_link_forgot_password">https://accounts.firefox.com/reset_password</string>
 
 <string name="fxaccount_checkbox_contentDescription">&fxaccount_checkbox_contentDescription;</string>
 <string name="fxaccount_icon_contentDescription">&fxaccount_icon_contentDescription;</string>
