--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -103,7 +103,8 @@
 <string name="firefox_account">&firefox_account;</string>
 
 <!-- Firefox Account links. -->
-<string name="fxaccount_link_old_firefox">https://support.mozilla.org/kb/use-sync-with-an-older-version-of-firefox</string>
+<!-- https://support.mozilla.org/1/mobile/%VERSION%/%OS%/%LOCALE%/old-sync -->
+<string name="fxaccount_link_old_firefox">https://support.mozilla.org/1/mobile/&formatS1;/&formatS2;/&formatS3;/old-sync</string>
 <string name="fxaccount_link_tos">https://accounts.firefox.com/legal/terms</string>
 <string name="fxaccount_link_pn">https://accounts.firefox.com/legal/privacy</string>
 <string name="fxaccount_link_create_not_allowed">http://www.ftc.gov/news-events/media-resources/protecting-consumer-privacy/kids-privacy-coppa</string>
