--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -65,7 +65,7 @@
   <string name="sync_button_ok">&sync.button.ok.label;</string>
 
   <!-- Account strings -->
-  <string name="sync_account_label">&sync.account.label.label;</string>
+  <string name="sync_account_label">&sync.account.label;</string>
 
   <!-- Bookmark folder strings -->
   <string name="bookmarks_folder_menu">&bookmarks.folder.menu.label;</string>
