--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -72,10 +72,10 @@
 <!ENTITY sync.button.cancel.label 'Cancel'>
 <!ENTITY sync.button.connect.label 'Connect'>
 <!ENTITY sync.button.ok.label 'OK'>
-  
+
 <!-- Account strings -->
-<!ENTITY sync.account.label.label '&syncBrand.fullName.label;'>
-  
+<!ENTITY sync.account.label '&syncBrand.fullName.label; (deprecated)'>
+
 <!-- Bookmark folder strings -->
 <!ENTITY bookmarks.folder.menu.label 'Bookmarks Menu'>
 <!ENTITY bookmarks.folder.places.label ''>
