--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -98,11 +98,9 @@
   <string name="sync_text_tab_sent">&sync.text.tab.sent.label;</string>
   <string name="sync_text_tab_not_sent">&sync.text.tab.not.sent.label;</string>
 
-<!-- Firefox Account strings. -->
-<string name="firefox_accounts">&firefox_accounts;</string>
-<string name="firefox_account">&firefox_account;</string>
+<!-- Firefox account strings. -->
 
-<!-- Firefox Account links. -->
+<!-- Firefox account links. -->
 <!-- https://support.mozilla.org/1/mobile/%VERSION%/%OS%/%LOCALE%/old-sync -->
 <string name="fxaccount_link_old_firefox">https://support.mozilla.org/1/mobile/&formatS1;/&formatS2;/&formatS3;/old-sync</string>
 <string name="fxaccount_link_create_not_allowed">http://www.consumer.ftc.gov/articles/0031-protecting-your-childs-privacy-online</string>
@@ -110,10 +108,10 @@
 <string name="fxaccount_link_pn">https://accounts.firefox.com/legal/privacy</string>
 <string name="fxaccount_link_forgot_password">https://accounts.firefox.com/reset_password</string>
 
-<string name="fxaccount_checkbox_contentDescription">&fxaccount_checkbox_contentDescription;</string>
-<string name="fxaccount_icon_contentDescription">&fxaccount_icon_contentDescription;</string>
-<string name="fxaccount_intro_contentDescription">&fxaccount_intro_contentDescription;</string>
-<string name="fxaccount_mail_contentDescription">&fxaccount_mail_contentDescription;</string>
+<string name="fxaccount_checkbox_contentDescription">&fxaccount_checkbox_contentDescription2;</string>
+<string name="fxaccount_icon_contentDescription">&fxaccount_icon_contentDescription2;</string>
+<string name="fxaccount_intro_contentDescription">&fxaccount_intro_contentDescription2;</string>
+<string name="fxaccount_mail_contentDescription">&fxaccount_mail_contentDescription2;</string>
 
 <string name="fxaccount_email_hint">&fxaccount_email_hint;</string>
 <string name="fxaccount_password_hint">&fxaccount_password_hint;</string>
@@ -164,6 +162,7 @@
 <string name="fxaccount_update_credentials_button_label">&fxaccount_update_credentials_button_label;</string>
 <string name="fxaccount_update_credentials_unknown_error">&fxaccount_update_credentials_unknown_error;</string>
 
+<string name="fxaccount_status_header">&fxaccount_status_header;</string>
 <string name="fxaccount_status_sync">&fxaccount_status_sync;</string>
 <string name="fxaccount_status_sync_enabled">&fxaccount_status_sync_enabled;</string>
 <string name="fxaccount_status_needs_verification">&fxaccount_status_needs_verification2;</string>
@@ -175,7 +174,7 @@
 <string name="fxaccount_status_tabs">&fxaccount_status_tabs;</string>
 <string name="fxaccount_status_legal">&fxaccount_status_legal;</string>
 
-<string name="fxaccount_label">&fxaccount_label;</string>
+<string name="fxaccount_label">&fxaccount_account_type_label;</string>
 
 <string name="fxaccount_options_title">&fxaccount_options_title;</string>
 <string name="fxaccount_options_configure_title">&fxaccount_options_configure_title;</string>
