--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -7,8 +7,6 @@
 <!ENTITY syncBrand.fullName.label "Firefox Sync">
 <!ENTITY syncBrand.shortName.label "Sync">
 
-<!ENTITY fxaccountBrand.fullName.label "Firefox Account">
-
 <!-- Main titles. -->
 <!ENTITY sync.app.name.label '&syncBrand.fullName.label;'>
 <!ENTITY sync.title.connect.label 'Connect to &syncBrand.shortName.label;'>
@@ -107,22 +105,14 @@
 <!ENTITY sync.text.tab.sent.label 'Your tab was sent!'>
 <!ENTITY sync.text.tab.not.sent.label 'There was a problem sending your tab.'>
 
-<!-- Firefox Account strings -->
-
-<!-- Localization note: this is the brand title, shown at the top of most screens. -->
-<!ENTITY firefox_accounts 'Firefox Accounts'>
-
-<!-- Localization note: this refers to a single Firefox Account, shown
-     at the top of the account status activity. That activity allows
-     to configure the current Firefox Account. -->
-<!ENTITY firefox_account 'Firefox Account'>
+<!-- Firefox account strings. -->
 
 <!-- Localization note: these describe icons and graphics, and are
      consumed by assistive devices. -->
-<!ENTITY fxaccount_checkbox_contentDescription 'Firefox Accounts checkbox graphic'>
-<!ENTITY fxaccount_icon_contentDescription 'Firefox Accounts icon'>
-<!ENTITY fxaccount_intro_contentDescription 'Firefox Accounts introduction graphics'>
-<!ENTITY fxaccount_mail_contentDescription 'Firefox Accounts envelope graphic'>
+<!ENTITY fxaccount_checkbox_contentDescription2 'Firefox accounts checkbox graphic'>
+<!ENTITY fxaccount_icon_contentDescription2 'Firefox accounts icon'>
+<!ENTITY fxaccount_intro_contentDescription2 'Firefox accounts introduction graphics'>
+<!ENTITY fxaccount_mail_contentDescription2 'Firefox accounts envelope graphic'>
 
 <!-- Localization note: these are shown in all screens that query the
      user for an email address and password. Hide and show are button
@@ -164,7 +154,7 @@
 <!ENTITY fxaccount_account_create_not_allowed_learn_more 'Learn more'>
 
 <!ENTITY fxaccount_confirm_account_header 'Confirm your account'>
-<!-- Localization note: &formatS; is the Firefox Account's email address. -->
+<!-- Localization note: &formatS; is the Firefox account's email address. -->
 <!ENTITY fxaccount_confirm_account_verification_link 'A verification link has been sent to &formatS;'>
 <!ENTITY fxaccount_confirm_account_resend_email 'Resend email'>
 <!ENTITY fxaccount_confirm_account_verification_link_sent2 'Verification email sent'>
@@ -183,6 +173,7 @@
 <!ENTITY fxaccount_update_credentials_button_label 'Sign in'>
 <!ENTITY fxaccount_update_credentials_unknown_error 'Could not sign in'>
 
+<!ENTITY fxaccount_status_header 'Firefox account'>
 <!ENTITY fxaccount_status_sync '&syncBrand.shortName.label;'>
 <!ENTITY fxaccount_status_sync_enabled '&syncBrand.shortName.label;: enabled'>
 <!ENTITY fxaccount_status_needs_verification2 'Your account needs to be verified. Tap to resend verification email.'>
@@ -195,14 +186,14 @@
 <!ENTITY fxaccount_status_legal 'Legal' >
 
 <!-- Localization note: this is the name shown by the Android system
-     itself for a Firefox Account. It should be singular. -->
-<!ENTITY fxaccount_label '&fxaccountBrand.fullName.label;'>
+     itself for a Firefox account. Don't localize this. -->
+<!ENTITY fxaccount_account_type_label 'Firefox'>
 
 <!-- Localization note: these are shown by the Android system itself,
      when the user navigates to the Android > Accounts > [Firefox
-     Account] Screen. The link takes the user to the Firefox Account
+     Account] Screen. The link takes the user to the Firefox account
      status activity, which lets them manage their Firefox
-     Account. -->
+     account. -->
 <!ENTITY fxaccount_options_title '&syncBrand.shortName.label; Options'>
 <!ENTITY fxaccount_options_configure_title 'Configure &syncBrand.shortName.label;'>
 
@@ -223,5 +214,5 @@
 
 <!ENTITY fxaccount_sync_sign_in_error_notification_title2 '&syncBrand.shortName.label; is not connected'>
 <!-- Note to translators: the format string below will be replaced
-     with the Firefox Account's email address. -->
+     with the Firefox account's email address. -->
 <!ENTITY fxaccount_sync_sign_in_error_notification_text2 'Tap to sign in as &formatS;'>
