--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -165,7 +165,7 @@
 <string name="fxaccount_update_credentials_button_label">&fxaccount_update_credentials_button_label;</string>
 <string name="fxaccount_update_credentials_unknown_error">&fxaccount_update_credentials_unknown_error;</string>
 
-<string name="fxaccount_status_header">&fxaccount_status_header;</string>
+<string name="fxaccount_status_header">&fxaccount_status_signed_in_as;</string>
 <string name="fxaccount_status_sync">&fxaccount_status_sync;</string>
 <string name="fxaccount_status_sync_enabled">&fxaccount_status_sync_enabled;</string>
 <string name="fxaccount_status_needs_verification">&fxaccount_status_needs_verification2;</string>
