--- a/manifests/FxAccountAndroidManifest_activities.xml.in
+++ b/manifests/FxAccountAndroidManifest_activities.xml.in
@@ -1,7 +1,7 @@
         <activity
             android:theme="@style/FxAccountTheme"
             android:icon="@drawable/fxaccount_icon"
-            android:label="Status"
+            android:label="@string/fxaccount_status_activity_label"
             android:clearTaskOnLaunch="true"
             android:taskAffinity="@ANDROID_PACKAGE_NAME@.FXA"
             android:name="org.mozilla.gecko.fxa.activities.FxAccountStatusActivity"
@@ -17,7 +17,7 @@
         <activity
             android:theme="@style/FxAccountTheme"
             android:icon="@drawable/fxaccount_icon"
-            android:label="Setup"
+            android:label="@string/sync_app_name"
             android:clearTaskOnLaunch="true"
             android:taskAffinity="@ANDROID_PACKAGE_NAME@.FXA"
             android:name="org.mozilla.gecko.fxa.activities.FxAccountGetStartedActivity"
