--- a/manifests/FxAccountAndroidManifest_activities.xml.in
+++ b/manifests/FxAccountAndroidManifest_activities.xml.in
@@ -1,5 +1,5 @@
         <activity
-            android:theme="@style/FxAccountTheme"
+            android:theme="@style/FxAccountTheme.FxAccountStatusActivity"
             android:label="@string/fxaccount_status_activity_label"
             android:clearTaskOnLaunch="true"
             android:taskAffinity="@ANDROID_PACKAGE_NAME@.FXA"
